--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br ">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./logo.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Encurtador URL</title>
   </head>
-  <body>
-    <div class="center">
-      <div id="inputs">
-        <input type="text" id="url" placeholder="www.google.com" />
-        <input type="submit" id="submitButton" />
+  <body>    
+    <div id="main">
+     <img id="logo" src="./logo.png" alt="logo">
+      <div>
+        <div id="search-box-outer">
+          <input id="shortUrl" placeholder="Digite sua URL aqui" class="search-box-inner">
+        </div>
+        <div id="main-buttons-div">
+          <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="A url encurtada será copiada automaticamente" data-delay='{"show":"1"}'>
+            <input id="submitButton" type="submit" value="Encurtar" class="search-button">
+          </span>
+          <input id="openUrl" type="hidden" class="search-button" value="Abrir url encurtada">
+        </div>  
       </div>
-      <div id="shortUrl"></div>
-      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-      <script src="actions.js"></script>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="actions.js"></script>
   </body>
 </html>
